--- a/AppVuelos/AppVuelos/AppVuelos.csproj
+++ b/AppVuelos/AppVuelos/AppVuelos.csproj
@@ -53,6 +53,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>bddvuelosDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="bddvuelosDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>bddvuelosDataSet1.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="bddvuelosDataSet2.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>bddvuelosDataSet2.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +87,12 @@
     <Compile Include="frmClientes.Designer.cs">
       <DependentUpon>frmClientes.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmPaises.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmPaises.Designer.cs">
+      <DependentUpon>FrmPaises.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +104,12 @@
     </Compile>
     <Compile Include="frmReservaciones.Designer.cs">
       <DependentUpon>frmReservaciones.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmReservacionesVer2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmReservacionesVer2.Designer.cs">
+      <DependentUpon>FrmReservacionesVer2.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -103,11 +125,17 @@
     <EmbeddedResource Include="frmClientes.resx">
       <DependentUpon>frmClientes.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmPaises.resx">
+      <DependentUpon>FrmPaises.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmReservaciones.resx">
       <DependentUpon>frmReservaciones.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmReservacionesVer2.resx">
+      <DependentUpon>FrmReservacionesVer2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -128,6 +156,28 @@
     </None>
     <None Include="bddvuelosDataSet.xss">
       <DependentUpon>bddvuelosDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="bddvuelosDataSet1.xsc">
+      <DependentUpon>bddvuelosDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="bddvuelosDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>bddvuelosDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="bddvuelosDataSet1.xss">
+      <DependentUpon>bddvuelosDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="bddvuelosDataSet2.xsc">
+      <DependentUpon>bddvuelosDataSet2.xsd</DependentUpon>
+    </None>
+    <None Include="bddvuelosDataSet2.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>bddvuelosDataSet2.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="bddvuelosDataSet2.xss">
+      <DependentUpon>bddvuelosDataSet2.xsd</DependentUpon>
     </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
